blog: add armv6 binaries for v8.1.2 (#1272)

--- a/locale/en/blog/release/v8.1.2.md
+++ b/locale/en/blog/release/v8.1.2.md
@@ -26,7 +26,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v8.1.2/node-v8.1.2-linux-s390
 AIX 64-bit Binary: https://nodejs.org/dist/v8.1.2/node-v8.1.2-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v8.1.2/node-v8.1.2-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v8.1.2/node-v8.1.2-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v8.1.2/node-v8.1.2-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v8.1.2/node-v8.1.2-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v8.1.2/node-v8.1.2-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v8.1.2/node-v8.1.2.tar.gz<br>
@@ -46,6 +46,8 @@ Hash: SHA256
 cb8360a3dca94e5ff250eeb282fa131dec06e30699e7ccca16059a4c2d3648b9  node-v8.1.2-headers.tar.xz
 555f826cc3507462ce8f4b0f42301dd43ac9ec1640af99ab73c302945d45be18  node-v8.1.2-linux-arm64.tar.gz
 d468ac671047a5a5edb6edd34a9a625645505551c35ef73e2102c504535a09d4  node-v8.1.2-linux-arm64.tar.xz
+3aa8523d30c78c6908864edafc1b485254770a895e557fa2e2e63899524ca1c7  node-v8.1.2-linux-armv6l.tar.gz
+de388f42bf36881b3e0ed40c03c41c700cf85964d439101d95ae75c49b51210b  node-v8.1.2-linux-armv6l.tar.xz
 43cc882f0a6ad150d527ce5b0b0abefd6a7bdf12b1ab4f269c53fb9a68b02acc  node-v8.1.2-linux-armv7l.tar.gz
 c475670d4243df28eebc3d1d93475839228bbb01a224e8d95499d531425c15ba  node-v8.1.2-linux-armv7l.tar.xz
 83c0e5c6643381dd91f25607df17798ed637e590aadcb40334f4e2fb5401cd9a  node-v8.1.2-linux-ppc64le.tar.gz
@@ -81,13 +83,13 @@ eaae7f6c01e8140e6cc12059383bce3db7379ff88ca40578ba62a86bda45b6e8  node-v8.1.2-x6
 589983102a42e65e9db15353669d654f9f885608d4de23f88e2cdcffeec02e1b  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBCAAGBQJZQoBsAAoJEMJzeS99g1RdLyQH/jbE1tkIvyPHpfZTFilfcYZe
-RIcJU8w7CSzVklsigMx3MSZ8QmNDIqlS3KqFMHTW9ZVTfT1pYHtOn1XISp+f/Uxi
-2IPIg2nhAw2iisnNGlUwZGOAR+SXM7S70sBYPB7HWkSheQpBeTJ6X2WuLdLje7fx
-nJbFV96B/LnIg1KJLDV41uQi3izvAdLS7ywpbcPo0MCIkZhxRCWiJlURpIyleAGu
-0Zl+kh170rirYvqrNKTL7571Byzd6Rb6DCufV3ZtBqX0VKJ1UHclUK1+b4eGEbsV
-ndOvVmUrTc4hwb3rjWhUqJxMyowWH3CkWApmN1KfjoM3emixbdzXufmd3ivG4KU=
-=F1h/
+iQEcBAEBCAAGBQJZS3j0AAoJEMJzeS99g1RdAvwIALEhhAiPzZCsbo+RTRyJYI2b
+zoDUKuJvp2GYMwn6+68H0ut7Kln6Hv7PKkrA/MxivpNC7j1UBah0boFP1h798Lvr
++IB8EQkXMFwpQI6Oo2bkIovHZghqm9WqYSSlRxTeBMG6VCGDQ+ZRLL4xxU6EbYvU
+E5XszCCLv4t4on2jV/mHDA7Nyv+CXga+o8NvGZLIWGtR4fUObpY2d1Z9K3f/gsZa
+udxZE2ep9/FfE5QF7Hak37Iqsu/ClFQn3wgSpXOcxsQTBFwXvsh1nqgnmC8ILxxj
+F5eBRH4gJoVi3pht6O76HBZxOXiBOpUY4qDBf0VqXh4nHeRa0PToP4KYaxcaeIc=
+=ttiX
 -----END PGP SIGNATURE-----
 
 ```
