#1173: improve navigation through guides (#1286)
* 1173: improve navigation through guides.

* #1173: fix previous/next for de/it locales.

--- a/locale/ca/site.json
+++ b/locale/ca/site.json
@@ -11,6 +11,8 @@
   "all-downloads": "Totes les opcions de descàrrega",
   "nightly": "Versions Nightly",
   "chakracore-nightly": "Versions Node-ChakraCore Nightly",
+  "previous": "Précédent",
+  "next": "Prochain",
   "feeds": [{
       "link": "feed/blog.xml",
       "text": "Node.js Blog"
