--- a/locale/es/site.json
+++ b/locale/es/site.json
@@ -10,6 +10,8 @@
     "by": "por",
     "all-downloads": "Todas las opciones de descarga",
     "nightly": "Versiones nightly",
+    "previous": "Anterior",
+    "next": "Siguiente",
     "feeds": [
         {
             "link": "feed/blog.xml",
