--- a/locale/gl/site.json
+++ b/locale/gl/site.json
@@ -11,6 +11,8 @@
     "all-downloads": "Todas as opcións de descarga",
     "nightly": "Versións Nightly",
     "chakracore-nightly": "Versións Node-ChakraCore Nightly",
+    "previous": "Anterior",
+    "next": "Seguinte",
     "feeds": [
         {
             "link": "feed/blog.xml",
