--- a/locale/it/site.json
+++ b/locale/it/site.json
@@ -10,6 +10,8 @@
     "by": "da",
     "all-downloads": "Tutti i download",
     "nightly": "Build notturne",
+    "previous": "Precedente",
+    "next": "Successiva",
     "feeds": [
         {
             "link": "feed/blog.xml",
