--- a/locale/uk/site.json
+++ b/locale/uk/site.json
@@ -10,6 +10,8 @@
     "by": "від",
     "all-downloads": "Всі варіанти завантажень",
     "nightly": "Нічні збірки",
+    "previous": "Попередній",
+    "next": "Далі",
     "feeds": [
         {
             "link": "feed/blog.xml",
