--- a/locale/de/site.json
+++ b/locale/de/site.json
@@ -10,6 +10,8 @@
     "by": "von",
     "all-downloads": "Alle Download-Optionen",
     "nightly": "Nightly Builds",
+    "previous": "Zurück",
+    "next": "Weiter",
     "feeds": [
         {
             "link": "feed/blog.xml",
