Blog: edit 8.2.0 with releaser thanks note
Refs: https://github.com/nodejs/node/pull/13744

--- a/locale/en/blog/release/v8.2.0.md
+++ b/locale/en/blog/release/v8.2.0.md
@@ -8,6 +8,8 @@ layout: blog-post.hbs
 author: Jeremiah Senkpiel
 ---
 
+Big thanks to @addaleax who prepared the vast majority of this release.
+
 ### Notable changes
 
 * **Async Hooks**
