--- a/locale/en/blog/release/v8.2.0.md
+++ b/locale/en/blog/release/v8.2.0.md
@@ -311,7 +311,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v8.2.0/node-v8.2.0-linux-s390
 AIX 64-bit Binary: https://nodejs.org/dist/v8.2.0/node-v8.2.0-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v8.2.0/node-v8.2.0-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v8.2.0/node-v8.2.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v8.2.0/node-v8.2.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v8.2.0/node-v8.2.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v8.2.0/node-v8.2.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v8.2.0/node-v8.2.0.tar.gz<br>
