nodejs-fr: Use curved apostrophes instead of single quotes (#1303)
The curved typographical apostrophes (’) are preffered over single
quotes (') in French.

More details here:

http://www.brunobernard.com/des-textes-plus-elegants-avec-les-apostrophes-typographiques/

Replace “Évènements” by “Événements”. Even if this word is actually
pronounced “évènement” by most people, the correct spelling is
“événement”.

--- a/locale/fr/site.json
+++ b/locale/fr/site.json
@@ -6,7 +6,7 @@
     "scrollToTop": "Faire défiler en haut",
     "reportNodeIssue": "Rapporter un problème Node.js",
     "reportWebsiteIssue": "Rapporter un problème sur le site web",
-    "getHelpIssue": "Obtenir de l'aide",
+    "getHelpIssue": "Obtenir de l’aide",
     "by": "par",
     "all-downloads": "Toutes les options de téléchargement",
     "nightly": "Versions quotidiennes",
@@ -137,7 +137,7 @@
     },
     "getinvolved": {
         "link": "get-involved",
-        "text": "S'impliquer",
+        "text": "S’impliquer",
         "code-and-learn": {
             "link": "get-involved/code-and-learn",
             "text": "Coder + Apprendre"
@@ -152,7 +152,7 @@
         },
         "events": {
           "link": "get-involved/events",
-          "text": "Évènements"
+          "text": "Événements"
         },
         "conduct": {
             "link": "https://github.com/nodejs/node/blob/master/CONTRIBUTING.md#code-of-conduct",
