Blog: update 8.2.1 with armv6l link
Refs: https://github.com/nodejs/node/issues/13737
PR-URL: https://github.com/nodejs/node/pull/14399

--- a/locale/en/blog/release/v8.2.1.md
+++ b/locale/en/blog/release/v8.2.1.md
@@ -34,7 +34,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v8.2.1/node-v8.2.1-linux-s390
 AIX 64-bit Binary: https://nodejs.org/dist/v8.2.1/node-v8.2.1-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v8.2.1/node-v8.2.1-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v8.2.1/node-v8.2.1-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v8.2.1/node-v8.2.1-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v8.2.1/node-v8.2.1-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v8.2.1/node-v8.2.1-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v8.2.1/node-v8.2.1.tar.gz<br>
@@ -54,6 +54,8 @@ b6343e1d396dff5b29a62eff0550a7782a6b82b18625fb29cebd6735b30851f3  node-v8.2.1-ai
 0d57509e932d65535d74034eaa389576faad8cade613b73daed2ac01c1d99308  node-v8.2.1-headers.tar.xz
 914a031d02cbf759238fa1c051bc21739abfa15572eae77c03cc34c37031b3ef  node-v8.2.1-linux-arm64.tar.gz
 9ed01737f37d410067beeb42066e51f6d0385677c7d0daeeaf2e32cb2aca854a  node-v8.2.1-linux-arm64.tar.xz
+b98a17579636cf6cc46f0fe721fcf3b0b360f27c77678754e1eebe27a70625f1  node-v8.2.1-linux-armv6l.tar.gz
+167ccad4c6a848a7b17ead0b2d95770e984a2c8d69ddd42ea78813174daee716  node-v8.2.1-linux-armv6l.tar.xz
 97a2752cfe0ee1ae9225de4a3787a79f4b82c5679122019aff20835b09ecb62e  node-v8.2.1-linux-armv7l.tar.gz
 52a3abbf9450fbb91b39aaa268977a593daa8fc7dec0925d32ac7afd3a3596e2  node-v8.2.1-linux-armv7l.tar.xz
 b01cb4d1f04c52d68faf90157bc234e907b4206c0a4057e8911bdda184fd1f50  node-v8.2.1-linux-ppc64le.tar.gz
@@ -90,19 +92,19 @@ c5d78cbceecb503966be96778b771a96951f9cb8991175214e6c71ef731b096e  win-x86/node_p
 -----BEGIN PGP SIGNATURE-----
 Comment: GPGTools - https://gpgtools.org
 
-iQIcBAEBCAAGBQJZcSzHAAoJEEX17r2BPa6OcMoQAJMzhPqtDGp5muBAZvqX4dXt
-m9skinGEjgWq2sbvQHkYjbqeYc0gBkt3M7PWVfuKtrNew3YtOTOOuATXosgZqwG+
-2A/zPpfHIFl1Rl34iliA1hT+GP05vDnFi6mPWkUJd8O4+7IimPtiX59+vP8S6qpw
-DIp3vS+BJmXzAQa1wnmyKKPFfSayFORIoIxhfdFFNczdceRXNl+knECrZ08BVQ8V
-X35YiAhr/uPse7wlJHbO6ln8h2/hpKVWmNsuOIf5+4yEKHSZSOjTFYUsw/zrYXrZ
-n2Vf50OHKWEtT8KDkMB1+v1v81SjfYwibTcELw/3byjhDL/fMBGx0sYVEHp3dE/Q
-3QvoVDVPt8XYXAm5tt362SGFjpIgdvuOegT6b+oUQ+eLYTsPm0QwTGrnZY5GGVxE
-PZNnkQWP8hNX/sN98mR009QHcv9ReoN4R0TvTQRTHmxZcbYLHRCXO5uBcIDdqbYW
-AwDQuNbwewp9XdwJKQTW+cvlKEck1X6AcbPG+4fTwbChvtxlC8SBQkCvI15NHc3r
-j2U4EFksopbGXlEZtiYbNmmhJypcX2urHhVrEPnRMVeIbQqSrM0cUh9rRTpeMZSF
-l1YXGmEGva+NBjV6qzSYr1QuPH/EG4tZ+phnSQPzAVGZUNIVZ5vBcf6lvXJOlm5M
-WRm0f1BTvI3jD9pLUdOQ
-=KcVv
+iQIcBAEBCAAGBQJZe7WYAAoJEEX17r2BPa6OupwP/1HKEvHWeAOxi7kCbYhcUgoe
+isj728Uq8MLuWcYs6Wnf+iQPQj2sAwfIFDq1RycIV5dxVbfvl6ONE1c1tZAauV3N
+US9nXn3yQE2N6EnlHotEH/U2n5AGvTeD4jZnfFlde5iXyqeNZf+Q/dR3on3oh50U
+Bj1bqEDfq0Jy8vOYrO83ZRETWjon8ndD51WmGSSi9+MZhN6ncM1p1NqKhxyDDb54
+PUjsiFGZp4/HcdDe0VE/qlK4eglDuu04R/PnHE4mM0xLyW9lhD8z/zyPIeI12RPc
+ng7lpzQa2RkRm9aVuIoM9yhTgcwVxDZXcj2le2k4XG3RsVo0xejB5uLoUi9CoGpR
+EoHznIzRGtxyi4N3p+3ffPBJlsOdXSBuq5qKU4j7M6pW+DckBVwALygvKCE3ZATM
+XKFQfyi/b/6VPa/sezil9tIyNIZVOTIY2Sfd/8o0O/gY+WsXnq2wNmspp884rI9x
+uUWyu9fgnWOshtAhetj0hXa6DfU2rp7lFt41MwIy0au8QuK1i9iTGhJRYcgm6fC6
+BiNuAMxazNtyWoNJENSnod/hFWVdOPTGcDwupLt+h8HFHJGcUyWWaonGMYrX1Q1G
+WAnZ1vFf0KMkiKn14TzUIoNGs4RRB/xjw7H77X00st3p4c1DuxFKKDvuX4zQJ5IV
+JrAr1XO7ExIG99fE6axI
+=LyDs
 -----END PGP SIGNATURE-----
 
 ```
