Blog: add armv6 to 6.11.2 blog post (#1325)

--- a/locale/en/blog/release/v6.11.2.md
+++ b/locale/en/blog/release/v6.11.2.md
@@ -262,7 +262,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v6.11.2/node-v6.11.2-linux-s3
 AIX 64-bit Binary: https://nodejs.org/dist/v6.11.2/node-v6.11.2-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v6.11.2/node-v6.11.2-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v6.11.2/node-v6.11.2-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v6.11.2/node-v6.11.2-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v6.11.2/node-v6.11.2-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v6.11.2/node-v6.11.2-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v6.11.2/node-v6.11.2.tar.gz<br>
@@ -282,6 +282,8 @@ a2e81b5f60bd8a6de90e37c70d024fe61b1caa54dbe2f076a10abe673f490073  node-v6.11.2-d
 86d677881976c49cb80c6449564b027b3fe577c9f63c6f5111c648018f2aa6cf  node-v6.11.2-headers.tar.xz
 914465dd907d2d785a6cb2e166ada7ce1e070f212267ce88ba7a326fe549a076  node-v6.11.2-linux-arm64.tar.gz
 c94e2cf7a68c34b2c93af2388b57f71e730a0736cec80b37ad8700210835f7a4  node-v6.11.2-linux-arm64.tar.xz
+bc44d3110f9c810a3018abd23627ddd1acfcbb83e8916647ee1435a4e7aa4fa2  node-v6.11.2-linux-armv6l.tar.gz
+67e559617317aa85f0dfe3d8b95bc1461946f9835cebea4c1486807a87ef7b80  node-v6.11.2-linux-armv6l.tar.xz
 0e758f5a87eb64bfb623d431cc31a50d1800158d83ab1a5d2f4c6b0d4140e850  node-v6.11.2-linux-armv7l.tar.gz
 bc5d8f54c68ef1b7596dac4c793a30c44da747a1c41c99edcdbfb3f17be465ff  node-v6.11.2-linux-armv7l.tar.xz
 095d0411667b00518f2ff0ea5eb17e01bfe17fe58b8eb8648e0be87bb89d8fb9  node-v6.11.2-linux-ppc64le.tar.gz
@@ -317,13 +319,13 @@ db6cc8f48362502dfb06b9c5e3abc2ded4da1e6981ed157030630a831f9e8800  win-x86/node_p
 0b3546a91f65688237fd47f5393ebffa2f487ee49828a2f4b7532ea5b368879c  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBCAAGBQJZgCn5AAoJEJM7AfQLXKlGDSAIAKKdhRsxqLR5R9ipmJ6pJJd5
-9LxJhVQ/G5P2Xc+LcKvoGXRuBgKdCKILm/p4u92pw7wsyGg7BhD9qsEwmjFVGz1y
-LN+wuGsXN4gEhrvBePvxf8gXwd2Wr2iXiKzjsjDRMo9ELTFxoBhrbEF7nvfiQ+I/
-OBhvSty/YaoFWOXAIhzqHGqRMurxf78b2waW1FsH0Vw4RKytVxikUoK24X5j9Uo8
-aQSbu/JDdQXbZy44o2FhX6AF88wNm00OCzNgDoD8Q6Ks8CtuuqmriEPbjgo9uA2V
-JNQsiX8naIMLFLMsfUoIQhfftvEkqJ4DSsmcYjP4OhseBQk7o/7vVrpNakFNz40=
-=Ujwc
+iQEcBAEBCAAGBQJZg0h7AAoJEJM7AfQLXKlGFkwIAI9liIOhS6nfTcS35jmmiAKW
+Jkvnob5NHtCIwc83kjnUkcIbTtn0d5GHivLwwjqErVWYE5pv5zt9vCZ7WTY0Tr6K
+LEXkgDwDbSI0O321f/2x4KfrXFBAZGVj8MjHNKD4p22rf1mfqBkv2G85g6SsuADa
+HCX/ivU1QhgluPWFfanon3xtiAErwYS50+8lmbjkKofYpgTdQCP//sksTV5R8QWa
+vbNytDIDxhxJNyNOh94cTqcinEkqQJiCFgb9i1y2X8yz7Og8S0nPwqWKVupMYYC+
+0bxSiW3UNccoD6kQ9Oh0lBzmNW1kVZ4RRcsSfz5+m5/WFEzYrfxayizn2xDbaQk=
+=mzK1
 -----END PGP SIGNATURE-----
 
 ```
