Add cert page! (#1389)
* add certification page

* add styling for logo placement

* add wall of thanks

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -120,6 +120,10 @@
             "link": "foundation/tsc",
             "text": "Technical Governance"
         },
+        "certification": {
+            "link": "foundation/certification",
+            "text": "Certification"
+        },
         "itn": {
              "link": "foundation/in-the-news",
              "text": "In the News"
