blog: fix a typo in v9.0.0.md (#1438)

--- a/locale/en/blog/release/v9.0.0.md
+++ b/locale/en/blog/release/v9.0.0.md
@@ -63,7 +63,7 @@ author: James M Snell
   * The `os.EOL` property is now read-only [[`f6caeb9526`](https://github.com/nodejs/node/commit/f6caeb9526)] [#14622](https://github.com/nodejs/node/pull/14622)
 
 * **Timers**
-  * `setTimeout()` will emit a warning if the timeout is larger that the maximum 32-bit unsigned integer. [[`ce3586da31`](https://github.com/nodejs/node/commit/ce3586da31)] [#15627](https://github.com/nodejs/node/pull/15627)
+  * `setTimeout()` will emit a warning if the timeout is larger than the maximum 32-bit unsigned integer. [[`ce3586da31`](https://github.com/nodejs/node/commit/ce3586da31)] [#15627](https://github.com/nodejs/node/pull/15627)
 
 ### Commits
 
