blog: update v9.2.0 blog post (#1474)
It was missing the armv6 binaries.

--- a/locale/en/blog/release/v9.2.0.md
+++ b/locale/en/blog/release/v9.2.0.md
@@ -167,7 +167,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v9.2.0/node-v9.2.0-linux-s390
 AIX 64-bit Binary: https://nodejs.org/dist/v9.2.0/node-v9.2.0-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v9.2.0/node-v9.2.0-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v9.2.0/node-v9.2.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v9.2.0/node-v9.2.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v9.2.0/node-v9.2.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v9.2.0/node-v9.2.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v9.2.0/node-v9.2.0.tar.gz<br>
@@ -187,6 +187,8 @@ Hash: SHA256
 48e20282487c6f8d955d270123359ddda73faf550254740aaad2336f74fea336  node-v9.2.0-headers.tar.xz
 39c2e7a40fcf219d322232c1fe86e6db6eb45361969fb9a2314abbe494207d33  node-v9.2.0-linux-arm64.tar.gz
 1b5c44160b7bfc9e5d63697d63c82330ae3e6094ab48449bd958ebe0baef73f0  node-v9.2.0-linux-arm64.tar.xz
+3698353153ed8e7af68b150accf77cc0ae4aac2cd57a01520d322c263a433dca  node-v9.2.0-linux-armv6l.tar.gz
+73b423ead7ec5c82b30efc7978c9eecb56b2d4ab02c55e2a7e0a7449d0883a7e  node-v9.2.0-linux-armv6l.tar.xz
 2b5c94aedda93b669f99ae60e90a5007969aad2b92818d30b91111224a0ad8f9  node-v9.2.0-linux-armv7l.tar.gz
 cd9268ab8b4eb79c9708130cea44966ff11be54a80dffd3d1c19bb8d43bfc63e  node-v9.2.0-linux-armv7l.tar.xz
 9a173db0c0b88dcddf08542736c597c87bf86d536df8fa65a4fdff75e7bb4243  node-v9.2.0-linux-ppc64le.tar.gz
@@ -222,19 +224,19 @@ c552d7c02788662017dbf9cbaf399caa9576c000299c94a39fe50281b07878c9  win-x86/node.e
 d6c8b6e7d9a90da6b522101c53449fe3df70adab48d821ea127b4694d9fe59b4  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEua6ZBf/XgD8lcUZhtjtTWkwgbKkFAloLd40ACgkQtjtTWkwg
-bKnutw/9HlIQrbLp29C90vEK/WIcus8UT3Y1is1KVsVZHfmcg7YA3vCF1blyJzUb
-/oRJcui9c3+UidoqSjBf1ub36AhGWQ7lve9RsNfSqzlKoMcPpvq6c9e8XO/cmuTE
-9sOFYZzgmQNPteE9T3yMx7GTIEn14+Aiga1wMrjRLc6k5gLLVs5ZkJLVSqi4Aakb
-WSJa5YCZDW2VZODYun4iFqbVsiz2Vh8OukyzE+opNW5QKoes58/X3riWpHXvm8Tl
-U4H8aXaeNPGULGEV+OdDe82KsbCA24N7EllIQTyDzk/PM7+KOn8O3WC9x/X+2QB/
-j0qq/uQR6C3ASqfwTDwIUQSzsSw8tmYRVY2ZnwEGSDkmQiqpne4S8ckI2BpgvOn+
-ypYSoKB+QfiG9R58tWkZ8uMpcI5YeSGxNlN/SZdoGIOnCDxdZR4Vl1Dc2I2Xz9K0
-SR7Tapu5EfaoS6Ap6XIMKlnqtkLyjrPdMF9Bhe433a+R3tl7rAA4DevkPyx1BclW
-8F0lW0OlOMCb4tO12P043rtGdHKb+ly0y1GwyudasSHJOzVX0MUN2vcKOmswKMSJ
-6KMS3pXYY/fxJPg9SzrRQouT4f+eMXSmmcN8wt7l6IV2ng4bNLXiMSPyafUyl9cJ
-e7m/MzDyWFbtnvyqdQFidnYW9h+/qK+bdDax+tSCG+hMLxfqD8M=
-=Oxct
+iQIzBAEBCAAdFiEEua6ZBf/XgD8lcUZhtjtTWkwgbKkFAloNovQACgkQtjtTWkwg
+bKkvNQ/9GlPegK7/KOsF2R4xuMPSVwOPyTRyZPV4hRWzC+g2T+d8fWGHuZJ/MjZl
+5nc3fRBtNVWVewvhUjRUaf0Ex0XkCn3PuirUAVg8ZByPx/ljjeKDPx6CUekv/kk1
+hjPh7S5MtEW8VV7/XJcxpiX9eFVGjyfQMF7hUhPPJ8IIFtneV/y2j4zRJbn4FTCL
+QzUjb8s+G6kXYEhXNsVpnmOAvSU9hStFcNxnb2WwmMgBIVn291B148R7ZFd3rxLy
+6Bzmv6qWawMLvndquZW9sh0VtVDAS0nnXO3hUjtsGtmoBC/GlBeNLxGMJk7++auI
+pOAnbDLI6024CJBYx6oNaqWAdmVYFciFqom0C48a2q0lnFwlUlkYtYF2hm3eZlFT
+AJPVlkKBQr3mlm88tWB8JD9paL+01TWmT7Li7RiI+Jw3V/UDy+2u9jY19tnPIsZe
+YW+zL3SCqe4UI4vXIPv8hO/PHbyGMxMYgP0PH3J6EI51G89s9pFmWApPM29h0zhd
+q3G3Whw0nIcxR8QvdmAJ5ON++2sr2EGN1Gs3pPHTWMgncHHjcNvoPJdT61pk5v70
+4a4u+w8MuPsvn3q63pFvsFVSXAU6z9euQMi3IIuVC/E6ltguGOq98TpcZS269vaU
+godnvMca4gze4dXxIePAWDhP+pfDVDLx5djpja5cmwy6SosjG3k=
+=fqSp
 -----END PGP SIGNATURE-----
 
 ```
