Add Community Committee to the About section (#1465)
* Add Community Committee to the About section

* Updated to reflect feedback

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -35,6 +35,10 @@
             "link": "about/governance",
             "text": "Governance"
         },
+        "community": {
+            "link": "about/community",
+            "text": "Community"
+        },
         "workinggroups": {
             "link": "about/working-groups",
             "text": "Working Groups"
