blog: update 8.9.3 to include armv6

--- a/locale/en/blog/release/v8.9.3.md
+++ b/locale/en/blog/release/v8.9.3.md
@@ -51,7 +51,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v8.9.3/node-v8.9.3-linux-s390
 AIX 64-bit Binary: https://nodejs.org/dist/v8.9.3/node-v8.9.3-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v8.9.3/node-v8.9.3-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v8.9.3/node-v8.9.3-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v8.9.3/node-v8.9.3-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v8.9.3/node-v8.9.3-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v8.9.3/node-v8.9.3-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v8.9.3/node-v8.9.3.tar.gz<br>
@@ -71,6 +71,8 @@ f8a5add5cc635ac6981a52ac777d9e7ff03c072078f2ec1f33e099e9f57e3fca  node-v8.9.3-he
 c0aa9ccfc9445b912367e695285cab6d153904c75a67b9cf7ce1b5fc8620ba99  node-v8.9.3-headers.tar.xz
 df32e87060f5426fc6c6b1af8e3e130ae08ee36f570ac3728442c7833e53d7c3  node-v8.9.3-linux-arm64.tar.gz
 8860678ad0c24059380af254574e5a12371a2d5c92ca5e1ac7267314af7df04f  node-v8.9.3-linux-arm64.tar.xz
+c1303857ab808dfd72de748e359ef767df6411404f57d05805ca9bfffd0ab3a8  node-v8.9.3-linux-armv6l.tar.gz
+b3b588de37e4a6e227b540b3f85eac37fe7fd6e78ee92be9556eb17077f734ed  node-v8.9.3-linux-armv6l.tar.xz
 4288690edfb0ec8f20f34cbcb24580fad227b9323589a3f437d8fc474b19677d  node-v8.9.3-linux-armv7l.tar.gz
 4ca2b9a5b46c22353233365944c2df7f1566a298bf25f57be8c863bf1bd4e0f8  node-v8.9.3-linux-armv7l.tar.xz
 0ddb29995a279c3ce630aee38dc5a5745e99283d440a9381e8ca209ccb860352  node-v8.9.3-linux-ppc64le.tar.gz
@@ -104,14 +106,14 @@ f9a60e58680f720e4ca63833aa500586d4cc6366763a727b80f3f3153eeb1e7f  win-x86/node_p
 834f09cc6c78ebf8b0d210aa55a4fdbecaab0f30a12f8b467a2de04b5db0d78b  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEzBAEBCAAdFiEEDv/hvO/ZyE49CYFSkzsB9AtcqUYFAloqt5wACgkQkzsB9Atc
-qUZTWwf/Yynt4R9LrlaGYNgPDTfSAaKTtrjtKFTbQnRAcL6Npeu+2J7kRwvRHbW1
-/ZQn85A4XvzA/uBUFey3JBHPh9gYv1eHmfY62uWEbVb8po2jbz3hm90U5u2p1hT/
-E/oVfIJl0LvDDfVThv0wiy/ciDGNISs9U30rlmodkqdReV3eVJ23lWprjyljuW/+
-cEXCg7OuJOMRc5kQsyrzC0ZvebuV5V8WO0XdaSMY6AXUzFh5EgJlbo4c0IsUtUlc
-cegA7l3mchyIE/4J+mdcqk318OHN4TrE5Mb896efcFKfKiLgzrIv+1Xo8bWp26JF
-nbvp3UThLPQ8YxMd13O93yEPh4F6pQ==
-=oyyp
+iQEzBAEBCAAdFiEEDv/hvO/ZyE49CYFSkzsB9AtcqUYFAlorI/YACgkQkzsB9Atc
+qUbatAgAnFGQj8EF/sT/Ffk2Q2atHoDMT/ip9e3a8YRrMXX98n9ECgYsnCU+jPpU
+vOohwp7Seoj/dCSoCot6kE/OM8qfpzdIpTdQzYAOrn5cKIxIaI3q9im9GpCc4MHF
+0vpMIWD6BjJU8fshGqqaQv7qhRu0VNNaRanzmh45r0P9rBooe8gszrmUW8g22Jul
+k6FaOONCMjyqrmjgl9bIqdR4h8ic+zX0LyU44rRz0YaMHheNyD/zo67cqPJAgdXF
+7fdefc1j7Bv+lGjzWcm2AHGm6Y5p33VLaxtQ1KVwyAUyoxLfB6jdRjwTh6X47rxa
+k74izQxS7uOKBUHSy7E0FjNzLRYIGw==
+=jUNr
 -----END PGP SIGNATURE-----
 
 ```
