Remove outdated 'get-involved/development' page (#1535)
* Remove outdated 'get-involved/development' page

Te content of the 'development' page was outdated and written in a way too long
and complex manner. Currently, there are two documents, explaining the
overall governance and contribution process in detail:

- https://github.com/nodejs/node/blob/master/GOVERNANCE.md
- https://github.com/nodejs/node/blob/master/CONTRIBUTING.md

Both documents go into a level of detail that IMHO aren't suitable for a general
"get involved" text like on the website, so the following sections were added:

- Where to get general help (linking Node.js help repository)
- Code contribution guidelines (CONTRIBUTING.md#pull-requests)
- What are 'Collaborators', who appoints them and how can I become one

Other changes:

- Removes menu item from all translations
- Fix links and minor layout issues in 'get-involved/index' (ca, en, es, uk)
- Remove note about last Fall's collab summit's Code + Learn (en)

Fixes: #758

* Remove 'get-involved/development.md' page

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -118,13 +118,9 @@
       "link": "get-involved/contribute",
       "text": "Contribute"
     },
-    "development": {
-      "link": "get-involved/development",
-      "text": "Development"
-    },
     "conduct": {
       "link": "https://github.com/nodejs/node/blob/master/CONTRIBUTING.md#code-of-conduct",
-      "text": "Conduct"
+      "text": "Code of Conduct"
     }
   },
   "security": {
