blog: update 9.6.0 post

--- a/locale/en/blog/release/v9.6.0.md
+++ b/locale/en/blog/release/v9.6.0.md
@@ -18,7 +18,7 @@ author: Myles Borins
   - ICU 60.2 bump (Steven R. Loomis) [#17687](https://github.com/nodejs/node/pull/17687)
   - Introduce ScriptOrModule and HostDefinedOptions to V8 (Jan Krems) [#16889](https://github.com/nodejs/node/pull/16889)
 * **http**:
-  - add options to http.createServer() for `IncomingMessage` and `ServerResponse` (Peter Marton) [#15752](https://github.com/nodejs/node/pull/15752)
+  - add options to http.createServer() for `IncomingMessage` and `ServerReponse` (Peter Marton) [#15752](https://github.com/nodejs/node/pull/15752)
 * **http2**:
   - add http fallback options to .createServer (Peter Marton) [#15752](https://github.com/nodejs/node/pull/15752)
 * **https**:
@@ -119,7 +119,7 @@ author: Myles Borins
 * [[`22093abbc8`](https://github.com/nodejs/node/commit/22093abbc8)] - **doc**: add Gibson Fahnestock to TSC (Rich Trott) [#18481](https://github.com/nodejs/node/pull/18481)
 * [[`61d4e1d207`](https://github.com/nodejs/node/commit/61d4e1d207)] - **doc**: reorder section on updating PR branch (Ali Ijaz Sheikh) [#18355](https://github.com/nodejs/node/pull/18355)
 * [[`8a627b17a4`](https://github.com/nodejs/node/commit/8a627b17a4)] - **doc**: add pending-deprecation to COLLABORATOR_GUIDE (Сковорода Никита Андреевич) [#18433](https://github.com/nodejs/node/pull/18433)
-* [[`b76e111ee4`](https://github.com/nodejs/node/commit/b76e111ee4)] - **doc**: fix manpage warnings (Roman Reiss) 
+* [[`b76e111ee4`](https://github.com/nodejs/node/commit/b76e111ee4)] - **doc**: fix manpage warnings (Roman Reiss)
 * [[`b841abc328`](https://github.com/nodejs/node/commit/b841abc328)] - **doc**: warn about GCM authenticity (Tobias Nießen) [#18376](https://github.com/nodejs/node/pull/18376)
 * [[`2d968ca0d5`](https://github.com/nodejs/node/commit/2d968ca0d5)] - **doc**: Update tools/icu/README.md (Steven R. Loomis) [#16939](https://github.com/nodejs/node/pull/16939)
 * [[`8c6dc62dc4`](https://github.com/nodejs/node/commit/8c6dc62dc4)] - **doc**: dedupe links (Vse Mozhet Byt) [#18213](https://github.com/nodejs/node/pull/18213)
@@ -172,7 +172,7 @@ author: Myles Borins
 * [[`de3231c13a`](https://github.com/nodejs/node/commit/de3231c13a)] - **src**: factor out some common vm functions (Timothy Gu) [#17560](https://github.com/nodejs/node/pull/17560)
 * [[`a258f6b5ce`](https://github.com/nodejs/node/commit/a258f6b5ce)] - **src**: flatten ContextifyContext (Gus Caplan) [#17560](https://github.com/nodejs/node/pull/17560)
 * [[`a7419d0902`](https://github.com/nodejs/node/commit/a7419d0902)] - **src**: replace var for let / const. (alejandro estrada) [#18649](https://github.com/nodejs/node/pull/18649)
-* [[`d190c9a41e`](https://github.com/nodejs/node/commit/d190c9a41e)] - **src**: add "icu::" prefix before ICU symbols (Steven R. Loomis) 
+* [[`d190c9a41e`](https://github.com/nodejs/node/commit/d190c9a41e)] - **src**: add "icu::" prefix before ICU symbols (Steven R. Loomis)
 * [[`3ec3c329c6`](https://github.com/nodejs/node/commit/3ec3c329c6)] - **src**: fix crypto.pbkdf2 callback error argument (BufoViridis) [#18458](https://github.com/nodejs/node/pull/18458)
 * [[`464df6d9b5`](https://github.com/nodejs/node/commit/464df6d9b5)] - **(SEMVER-MINOR)** **src**: allow --perf-(basic-)?prof in NODE_OPTIONS (Leko) [#17600](https://github.com/nodejs/node/pull/17600)
 * [[`43956e9600`](https://github.com/nodejs/node/commit/43956e9600)] - **src**: free memory before re-setting URLHost value (Ivan Filenko) [#18357](https://github.com/nodejs/node/pull/18357)
@@ -258,7 +258,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v9.6.0/node-v9.6.0-linux-s390
 AIX 64-bit Binary: https://nodejs.org/dist/v9.6.0/node-v9.6.0-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v9.6.0/node-v9.6.0-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v9.6.0/node-v9.6.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v9.6.0/node-v9.6.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v9.6.0/node-v9.6.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v9.6.0/node-v9.6.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v9.6.0/node-v9.6.0.tar.gz<br>
@@ -278,6 +278,8 @@ cda2631169c25e62919b4cf177e2c7b801fa54183b7d1ab6841687f879b14479  node-v9.6.0-he
 d4da9bc0e5ab8506658bb808a1e7d053abb456d185ccc907f6f9d0a5ae72b23a  node-v9.6.0-headers.tar.xz
 8a96c6facbf9ddbd840e5d34664c5cd2835dbd4081fda4dba8a818c1766410ca  node-v9.6.0-linux-arm64.tar.gz
 eb10815b1d21e8f5111b90c15b19050279b44666d08a12f26906271e9f6b02dd  node-v9.6.0-linux-arm64.tar.xz
+60660f02e603d5f4349a273f1276670ff30744cc7b8e57526e675fd7590d6d1a  node-v9.6.0-linux-armv6l.tar.gz
+0db6ef7df084b313b76e22e861226872f8ef5156749ae1245085ed9fad2e8f66  node-v9.6.0-linux-armv6l.tar.xz
 70f77964bac32b36c51bee14814acbc47a5bfc9dba082c6b95aae7a3abc98b05  node-v9.6.0-linux-armv7l.tar.gz
 b386569d78063dbc4a2d4de61040e411f025383aa3f96aec75303670545c1799  node-v9.6.0-linux-armv7l.tar.xz
 08d5bf2e145d9d1d6589a2b4862d084919dc5720f017f40fa724982705f5269c  node-v9.6.0-linux-ppc64le.tar.gz
@@ -311,14 +313,14 @@ b28c588ec4147e6193f4b0e3a80f4a1d71cbe63ebd4d8aec5451313bc5f6560d  win-x86/node.l
 cc0078b983d75f6afb2b21c0629a3d2cdb363eb6a2db4e161a36cb3b14fbb077  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEzBAEBCAAdFiEEDv/hvO/ZyE49CYFSkzsB9AtcqUYFAlqO92wACgkQkzsB9Atc
-qUadEgf9Ge77n24xpC9R82mzGmBpIVGUcrgDaP3C1yeMT2e0OJ2rNKDZYPzNJWM4
-naUtvzXAwChVlUD8L3qbaJ0j9qLmlnaA2xa7x90CY0lxY8tGPRRlPJXVtpKVKo7K
-T9hOQ1hbN/UXA+rD3aQONQCuYh/lZjjuuuiVDViKsRErj3YA/KN3HsnrJlbKAb0E
-IiM3RJDnN89vjoYQZ2w+Uw7q6j/Lso4Eo25WvC2ODA3VqKuHne/hLHIj1eaaxW5G
-/SeviD3Eg6ObYsbDcT+PkiNhaqWjouIlNMRoLasoS86gM/IopZThmmw/t03SC737
-BObxXWU8PQ0T7uD2vgE74F84kK3Lpg==
-=85YC
+iQEzBAEBCAAdFiEEDv/hvO/ZyE49CYFSkzsB9AtcqUYFAlqgmDAACgkQkzsB9Atc
+qUY6gAf+OPTV0Ezrp/H/CMOBYfh7novr59f9VHbKcYOx8yIma5aqKdk0D5d/Rmv5
+4MiIyi/6Jxo0DqDDe54SRE4UUcj13bLdTUhWhW9DiwKKhgNx5ZCvE0dOlJ86KNR9
+BWycpi+DRwDcMEtD9z1Rp9IzGOhMi+366/e2yIZpPDhQnqbpik+jmgqR2Mo1AENi
+LCF4UijWPVFsL82GTlK+ZKInPfHm0nitgAwX2DN//ikuhBo87X61w96MR7zjyORE
+LxJX46tyLkjkTmlZtqd4ziUijZnnkcOtw7gk7VgPQDxr0D3i2gGPHkecugOVlAFm
+2VmlZTdTznrlm46s28n4carn7fzVkw==
+=quz8
 -----END PGP SIGNATURE-----
 
 ```
