nodejs-ko: translate docs/inspector (#1594)
## Work
- squashed two code review feedbacks.
- nodejs-ko: apply code review feedback "translate docs/inspector"
- remove whitespace

--- a/locale/ko/site.json
+++ b/locale/ko/site.json
@@ -93,6 +93,10 @@
     "guides": {
       "link": "docs/guides",
       "text": "안내"
+    },
+    "inspector": {
+      "link": "docs/inspector",
+      "text": "인스펙터"
     }
   },
   "getinvolved": {
