blog: add arm v6 to 4.9.0

--- a/locale/en/blog/release/v4.9.0.md
+++ b/locale/en/blog/release/v4.9.0.md
@@ -45,7 +45,7 @@ Linux s390x 64-bit Binary: *Coming soon*<br>
 AIX 64-bit Binary: *Coming soon*<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v4.9.0/node-v4.9.0-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v4.9.0/node-v4.9.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v4.9.0/node-v4.9.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v4.9.0/node-v4.9.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.9.0/node-v4.9.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v4.9.0/node-v4.9.0.tar.gz<br>
@@ -64,6 +64,8 @@ cb5cebf97f06da566aab26c994b9324e5bdf49e77b67366a96601884860eba32  node-v4.9.0-he
 3f3a60fc351b9307604d94db9df6590979f148c3c7391dee18c302c5f0a08963  node-v4.9.0-headers.tar.xz
 58c47ff94cb79ec8dd3c2c5d21a1836df00914e6306201503baffbf584012171  node-v4.9.0-linux-arm64.tar.gz
 89b3462cb184404ca154f70e9fd169ef4a234c2c1b65fa7a60ecdf91f67adbe4  node-v4.9.0-linux-arm64.tar.xz
+44fd2c83ba525e89bcf9ced36f9413dab52de5066942d6dbdac2f4f01354fbe6  node-v4.9.0-linux-armv6l.tar.gz
+6f1ca87bbbec3746f437e9b437c8775419e49265a827bc8bf22748712b2f11aa  node-v4.9.0-linux-armv6l.tar.xz
 f67808a2ae7c39e51732df15aa33b12f1ec1375c83c8b483d28452c9b748b8ae  node-v4.9.0-linux-armv7l.tar.gz
 db73d54719c44eabf98296d269f9a1d2e10730ac28dc1cd7c82638f27f73402b  node-v4.9.0-linux-armv7l.tar.xz
 2b71b7acf75f51babd2057a86a44afc1f8b4999201e7d083a0fa8ed07f95a9a6  node-v4.9.0-linux-ppc64le.tar.gz
@@ -97,14 +99,14 @@ f8e921807c07567a220e571c14838971dbc619f874db40b7dd545dde38ae32fd  win-x86/node.e
 48e537e1af08bc3897e8cac64789303538afa16c61e093b1dfbb241ec5748d75  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEzBAEBCAAdFiEEDv/hvO/ZyE49CYFSkzsB9AtcqUYFAlq7wfoACgkQkzsB9Atc
-qUYGlQgArUpjtd9BrPNBz6JcmqF12cgN+DicTbKHoOAQwK43r3KL8ARVpq7Poehn
-DlyaazyzOpS3F0ngK0Xszux4ZB/vJvs7VlOiH1lEMvD34RI+X0+BKh/msNz5gy8S
-Pd1aw0DpnO5cWvShh1S2PnWdYGFLrN31Ecjp9BS6mcxS9jJxwSv6U1fXFhfQ9FwZ
-Zqz7SmIhpXxnteNqe9QggUS+8bTLGbZbwFGMDwi8T2exte4RWPYzwzhMyH+SMjfP
-Pc1Z899JgwsBf/tL4+zMr1Cdch93y8/NiInPUNsVOI6O4yt0YmeOT+KXzJdPiCC6
-G2x4ojAcgz4CcGHvemNyApQx6qfPQw==
-=JFOJ
+iQEzBAEBCAAdFiEEDv/hvO/ZyE49CYFSkzsB9AtcqUYFAlq8NmsACgkQkzsB9Atc
+qUZMVQgAiGlbWpgatCiM7vImDIZec0/aWgDSDSLmB5lVr1RlM+B2Hs8Bpc3ffcSz
+g9B8MJERcqqU8PL6r3QTQlK79FIJVd3ut1sphQJYa+Qtw3mDYGywN+B/u2/yKjvN
+hQUJ+bsalcixGnvZ11dE1zw2czm9pKD6KhqmkwaUzYOLl/oVNuvQKHd47eRt2ZQs
+fa01v3fq4Da9EaVbvDHP4rdidRW6b1hVDck9J/QcnE7LfWZd8AGZ3mFwkSyklp37
+dJ38PCnJneefkdIZY5e8a8LOvv9FjUCuKPF23KLiLfNk/HSgpuvlXxWgjXQzcHGs
+bjzfAYIaKmvoFXIG0bCm9UVp6u6sGA==
+=s5Ym
 -----END PGP SIGNATURE-----
 
 ```
