feature: add link to verification docs (#1626)
Add a link on the /download page to the documentation regarding
verification of the node binary in the README of the nodejs/node
repository.

Fixes: https://github.com/nodejs/nodejs.org/issues/1621
Refs: https://github.com/nodejs/help/issues/1203

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -75,7 +75,9 @@
     },
     "shasums": {
       "link": "SHASUMS256.txt.asc",
-      "text": "Signed SHASUMS for release files"
+      "text": "Signed SHASUMS for release files",
+      "verify-link": "https://github.com/nodejs/node#verifying-binaries",
+      "verify-text": "How to verify"
     }
   },
   "docs": {
