--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -12,7 +12,7 @@
   "nightly": "每日构建",
   "chakracore-nightly": "Node-ChakraCore 每日构建",
   "previous": "以前",
-  "next": "下一個",
+  "next": "下一个",
   "feeds": [
     {
       "link": "feed/blog.xml",
