nodejs-zh-TW: Add/Improve some translations (#1704)

--- a/locale/zh-tw/site.json
+++ b/locale/zh-tw/site.json
@@ -6,7 +6,7 @@
   "scrollToTop": "回到頁首",
   "reportNodeIssue": "回報 Node.js 問題 ",
   "reportWebsiteIssue": "回報 Node.js 網站問題",
-  "getHelpIssue": "獲取幫助",
+  "getHelpIssue": "取得協助",
   "by": "by",
   "all-downloads": "所有下載選項",
   "nightly": "每日構建",
