[Fix] Add missing localization for `Community` part (#1737)
For `https://nodejs.org/zh-cn/about/`, we've missed a translation for
the left title of `Community`. And this also happens with almost every
other languages EXCEPT English. We DO NOT have `community` in our
`site.json`.

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -37,6 +37,10 @@
       "link": "about/governance",
       "text": "管理规则"
     },
+    "community": {
+      "link": "about/community",
+      "text": "社区"
+    },
     "workinggroups": {
       "link": "about/working-groups",
       "text": "工作组"
