add spanish translation for "collab summit" (#1782)
cc @nodejs/nodejs-es thanks @Maledong for the heads up in https://github.com/nodejs/nodejs.org/issues/1778

--- a/locale/es/site.json
+++ b/locale/es/site.json
@@ -126,5 +126,9 @@
     "pages": {
       "changelog": "Cambios"
     }
+  },
+  "collab-summit": {
+    "link": "get-involved/collab-summit",
+    "text": "Conferencia de colaboradores"
   }
 }
