--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -99,6 +99,10 @@
     "guides": {
       "link": "docs/guides",
       "text": "Guides"
+    },
+    "dependencies": {
+      "link": "docs/meta/topics/dependencies",
+      "text": "Dependencies"
     }
   },
   "getinvolved": {
