--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -99,6 +99,10 @@
     "guides": {
       "link": "docs/guides",
       "text": "教程"
+    },
+    "dependencies": {
+      "link": "docs/meta/topics/dependencies",
+      "text": "依赖项"
     }
   },
   "getinvolved": {
