--- a/locale/uk/site.json
+++ b/locale/uk/site.json
@@ -99,6 +99,10 @@
     "guides": {
       "link": "docs/guides",
       "text": "Керівництва"
+    },
+    "dependencies": {
+      "link": "docs/meta/topics/dependencies",
+      "text": "Залежності"
     }
   },
   "getinvolved": {
